--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
 </head>
 
 <body>
- <div class="button">
-  <button>estar</button>
- </div>
+  <div class="titulo">
+    <h1>
+      Wheel of
+    </h1>
+  </div>
+  <div>
+    <img src="./img/logo.png" alt="">
+  </div>
+  <div class="button">
+    <a>START</a>
+  </div>
+
 </body>
 
 </html>
