--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div class="contenedor">
   <div class="titulo">
     <h1>
       Wheel of
@@ -21,7 +22,7 @@
   <div class="button">
     <a>START</a>
   </div>
-
+</div>
 </body>
 
 </html>
