--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">i
+  <link rel="stylesheet" href="style.css">
   <title>Wheel of DOOM</title>
 </head>
 
@@ -16,11 +16,11 @@
       Wheel of
     </h1>
   </div>
-  <div>
+  <div class="img-titulo">
     <img src="./img/logo.png" alt="">
   </div>
   <div class="button">
-    <a>START</a>
+    <a href="http://">START</a>
   </div>
 </div>
 </body>
