--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">i
   <title>Wheel of DOOM</title>
-  <!DOCTYPE html><html><head><link href="https://fonts.googleapis.com/css?family=Monda&display=swap" rel="stylesheet" /></head><body><div class="v4_35"><div class="v4_40"></div><div class="v4_36"></div><div class="v4_37"></div><div class="v4_41"></div><span class="v4_42">start</span><div class="v7_2"></div><span class="v7_3">+</span></div></body></html> <br/><br/> <style>* {
+  <!DOCTYPE html><html><head><link href="https://fonts.googleapis.com/css?family=Monda&display=swap" rel="stylesheet" /></head><body><div class="v4_35"><div class="v4_40"></div><div class="v4_36"></div><div class="v4_37"></div><div class="v4_41"></div><span class="v4_42">start</span><div class="v7_2"></div><span class="v7_3">+</span></div></body></html> <br/><br/> <style>
+  * {
     box-sizing: border-box;
   }
   body {
