--- a/form.html
+++ b/form.html
@@ -4,18 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./from.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
+git 
 <body>
     <div class="jugadores ">
-        <input class="datos " type="text" id="datos" placeholder="ingresa tu nombre ">
-        <input class=" datos datos-resividos" type="text" id="datos" placeholder="inscritos ">
-        
+        <div class="info">
+            <input class="datos " type="txto" id="datos" placeholder="ingresa tu nombre ">
+            <ul class=" datos datos-resividos" type="txto" id="datos"></ul>
+        </div>
+
         <div class="ingreso">
-            <a href="http://">entrar</a>
+            <a href="http://">ENTRAR</a>
         </div>
     </div>
 
