--- a/form.html
+++ b/form.html
@@ -12,15 +12,18 @@ git
 <body>
     <div class="jugadores ">
         <div class="info">
-            <input class="datos " type="txto" id="datos" placeholder="ingresa tu nombre ">
-            <ul class=" datos datos-resividos" type="txto" id="datos"></ul>
+            <form>
+            <input class="datos " type="text" id="datos" placeholder="ingresa tu nombre " >
+            <ul class=" datos datos-resividos"  id="datos"></ul>
+        </form>
         </div>
 
         <div class="ingreso">
             <a href="http://">ENTRAR</a>
         </div>
     </div>
-
+<script src="./script.js"></script>
 </body>
 
 </html>
+                                     
