--- a/form.html
+++ b/form.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-git 
+
 <body>
     <div class="jugadores ">
         <div class="info">
-            <form>
+            <form class="form">
             <input class="datos " type="text" id="datos" placeholder="ingresa tu nombre " >
             <ul class=" datos datos-resividos"  id="datos"></ul>
         </form>
@@ -24,6 +24,8 @@ git
     </div>
 <script src="./script.js"></script>
 </body>
+
+
 
 </html>
                                      
