--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="./img/logo.png" alt="">
   </div>
   <div class="button">
-    <a href="http://">START</a>
+    <a href="./form.html">START</a>
   </div>
 </div>
 </body>
