--- a/form.html
+++ b/form.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="ingreso">
-            <a href="http://">ENTRAR</a>
+            <a href="http://">ESTART</a>
         </div>
     </div>
 <script src="./script.js"></script>
