Ajuste de backgrounds

--- a/form.html
+++ b/form.html
@@ -13,19 +13,18 @@
     <div class="jugadores ">
         <div class="info">
             <form class="form">
-            <input class="datos " type="text" id="datos" placeholder="ingresa tu nombre " >
-            <ul class=" datos datos-resividos"  id="datos"></ul>
-        </form>
+                <input class="datos " type="text" id="datos" placeholder="ingresa tu nombre ">
+                <ul class=" datos datos-resividos" id="datos"></ul>
+            </form>
         </div>
 
         <div class="ingreso">
-            <a href="http://">ESTART</a>
+            <a href="http://">NEXT</a>
         </div>
     </div>
-<script src="./script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 
 
 </html>
-                                     
