--- a/juego.html
+++ b/juego.html
@@ -10,8 +10,14 @@
 </head>
 
 <body>
-    
-
+    <div class="saludo">
+        <h1>QUEREMOS VERTE SIEMPRE SONREIR</h1>
+    </div>
+    <div class=" contenedor ">
+        <div class="gif">
+            <img src="./img/amongus-bailando.gif" alt="">
+        </div>
+    </div>
 </body>
 
 </html>
